k8s/service.yaml
# k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: simple-http-server
spec:
  type: LoadBalancer  # Exposes the service externally
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: simple-http-server
